# Copyright (C) 2020-2021 Intel Corporation.
#
# This software and the related documents are Intel copyrighted materials,
# and your use of them is governed by the express license under which they
# were provided to you ("License").
# Unless the License provides otherwise, you may not use, modify, copy,
# publish, distribute, disclose or transmit this software or the related
# documents without Intel's prior written permission.
#
# This software and the related documents are provided as is, with no
# express or implied warranties, other than those that are expressly stated
# in the License.

project('Intel(R) Media Streaming Library sample APPs', 'c',
                default_options: ['c_std=gnu11', 'buildtype=release'],
        		version: '1.0',)

common_app_src = []
include_dir = []

subdir('common')
subdir('rxtx_app')
