# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2022 Intel Corporation

perf_rfc4175_422be10_to_p10le_sources = files('rfc4175_422be10_to_p10le.c')
perf_p10le_to_rfc4175_422be10_sources = files('p10le_to_rfc4175_422be10.c')
perf_rfc4175_422be10_to_le_sources = files('rfc4175_422be10_to_le.c')
perf_rfc4175_422le10_to_be_sources = files('rfc4175_422le10_to_be.c')
perf_rfc4175_422be10_to_le8_sources = files('rfc4175_422be10_to_le8.c')
perf_rfc4175_422be10_to_v210_sources = files('rfc4175_422be10_to_v210.c')
perf_v210_to_rfc4175_422be10_sources = files('v210_to_rfc4175_422be10.c')
perf_dma_sources = files('perf_dma.c')
