# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2022 Intel Corporation

video_tx_sample_sources = files('tx_video_sample.c', 'sample_util.c')
video_rx_sample_sources = files('rx_video_sample.c', 'sample_util.c')
pipeline_tx_st20_sample_sources = files('tx_st20_pipeline_sample.c', 'sample_util.c')
pipeline_rx_st20_sample_sources = files('rx_st20_pipeline_sample.c', 'sample_util.c')
pipeline_tx_st22_sample_sources = files('tx_st22_pipeline_sample.c', 'sample_util.c')
pipeline_rx_st22_sample_sources = files('rx_st22_pipeline_sample.c', 'sample_util.c')

video_tx_rtp_sample_sources = files('tx_rtp_video_sample.c', 'sample_util.c')
video_rx_rtp_sample_sources = files('rx_rtp_video_sample.c', 'sample_util.c')
video_rx_slice_sample_sources = files('rx_slice_video_sample.c', 'sample_util.c')
video_tx_slice_sample_sources = files('tx_slice_video_sample.c', 'sample_util.c')
video_tx_st22_sample_sources = files('tx_st22_video_sample.c', 'sample_util.c')
video_rx_st22_sample_sources = files('rx_st22_video_sample.c', 'sample_util.c')

rx_st20_tx_st20_fwd_sources = files('rx_st20_tx_st20_fwd.c', 'sample_util.c')
rx_st20p_tx_st20p_fwd_sources = files('rx_st20p_tx_st20p_fwd.c', 'sample_util.c')
rx_st20p_tx_st22p_fwd_sources = files('rx_st20p_tx_st22p_fwd.c', 'sample_util.c')

video_tx_split_sample_sources = files('tx_video_split_sample.c', 'sample_util.c')
rx_st20_tx_st20_split_fwd_sources = files('rx_st20_tx_st20_split_fwd.c', 'sample_util.c')

redundant_rx_st20_sample_sources = files('rx_st20_redundant_sample.c', 'sample_util.c')

dma_sample_sources = files('dma_sample.c', 'sample_util.c')