# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2022 Intel Corporation

# pipeline
pipeline_tx_st20_sample_sources = files('tx_st20_pipeline_sample.c', 'sample_util.c')
pipeline_rx_st20_sample_sources = files('rx_st20_pipeline_sample.c', 'sample_util.c')
pipeline_tx_st22_sample_sources = files('tx_st22_pipeline_sample.c', 'sample_util.c')
pipeline_rx_st22_sample_sources = files('rx_st22_pipeline_sample.c', 'sample_util.c')
pipeline_tx_st30_sample_sources = files('tx_st30_pipeline_sample.c', 'sample_util.c')
pipeline_rx_st30_sample_sources = files('rx_st30_pipeline_sample.c', 'sample_util.c')
pipeline_tx_st40_sample_sources = files('tx_st40_pipeline_sample.c', 'sample_util.c')
pipeline_rx_st40_sample_sources = files('rx_st40_pipeline_sample.c', 'sample_util.c')

# fwd
rx_st20p_tx_st20p_fwd_sources = files('fwd/rx_st20p_tx_st20p_fwd.c', 'sample_util.c')
rx_st20p_tx_st22p_fwd_sources = files('fwd/rx_st20p_tx_st22p_fwd.c', 'sample_util.c')
rx_st20_tx_st20_split_fwd_sources = files('fwd/rx_st20_tx_st20_split_fwd.c', 'sample_util.c')
rx_st20p_tx_st20p_split_fwd_sources = files('fwd/rx_st20p_tx_st20p_split_fwd.c', 'sample_util.c')
rx_st20p_tx_st20p_merge_fwd_sources = files('fwd/rx_st20p_tx_st20p_merge_fwd.c', 'sample_util.c')
rx_st20p_tx_st20p_downsample_fwd_sources = files('fwd/rx_st20p_tx_st20p_downsample_fwd.c', 'sample_util.c')
rx_st20p_tx_st20p_downsample_merge_fwd_sources = files('fwd/rx_st20p_tx_st20p_downsample_merge_fwd.c', 'sample_util.c')

# misc
rx_st20p_timing_parser_sample_sources = files('rx_st20p_timing_parser_sample.c', 'sample_util.c')
rx_st20p_auto_detect_sample_sources = files('rx_st20p_auto_detect_sample.c', 'sample_util.c')

# ext frame
pipeline_tx_st20_ext_frame_sample_sources = files('ext_frame/tx_st20_pipeline_ext_frame_sample.c', 'sample_util.c')
pipeline_rx_st20_dyn_ext_frame_sample_sources = files('ext_frame/rx_st20_pipeline_dyn_ext_frame_sample.c', 'sample_util.c')
pipeline_rx_st20_dyn_hdr_split_gpu_direct_sources = files('ext_frame/rx_st20p_hdr_split_gpu_direct.c', 'sample_util.c')
video_tx_split_sample_sources = files('ext_frame/tx_video_split_sample.c', 'sample_util.c')

# legacy
video_tx_sample_sources = files('legacy/tx_video_sample.c', 'sample_util.c')
video_rx_sample_sources = files('legacy/rx_video_sample.c', 'sample_util.c')
video_tx_st22_sample_sources = files('legacy/tx_st22_video_sample.c', 'sample_util.c')
video_rx_st22_sample_sources = files('legacy/rx_st22_video_sample.c', 'sample_util.c')
rx_st20_tx_st20_fwd_sources = files('legacy/rx_st20_tx_st20_fwd.c', 'sample_util.c')

# low level
video_tx_rtp_sample_sources = files('low_level/tx_rtp_video_sample.c', 'sample_util.c')
video_rx_rtp_sample_sources = files('low_level/rx_rtp_video_sample.c', 'sample_util.c')
video_rx_slice_sample_sources = files('low_level/rx_slice_video_sample.c', 'sample_util.c')
video_tx_slice_sample_sources = files('low_level/tx_slice_video_sample.c', 'sample_util.c')

# dma
dma_sample_sources = files('dma/dma_sample.c', 'sample_util.c')

# experimental
redundant_rx_st20_combined_sample_sources = files('experimental/rx_st20_redundant_combined_sample.c',
    'sample_util.c')

# new unified API
new_api_tx_video_lib_owned_sources = files('new_api/tx_video_lib_owned_sample.c', 'sample_util.c')
new_api_rx_video_lib_owned_sources = files('new_api/rx_video_lib_owned_sample.c', 'sample_util.c')
new_api_tx_video_user_owned_sources = files('new_api/tx_video_user_owned_sample.c', 'sample_util.c')
new_api_rx_video_user_owned_sources = files('new_api/rx_video_user_owned_sample.c', 'sample_util.c')

# gpu direct
gpu_direct_tx_sample_sources = files('gpu_direct/tx_st20_pipeline_gpu_direct.c', 'sample_util.c')
gpu_direct_rx_sample_sources = files('gpu_direct/rx_st20_pipeline_gpu_direct.c', 'sample_util.c')