# Copyright (C) 2021 Intel Corporation.
#
# This software and the related documents are Intel copyrighted materials,
# and your use of them is governed by the express license under which they
# were provided to you ("License").
# Unless the License provides otherwise, you may not use, modify, copy,
# publish, distribute, disclose or transmit this software or the related
# documents without Intel's prior written permission.
#
# This software and the related documents are provided as is, with no
# express or implied warranties, other than those that are expressly stated
# in the License.

sources = files('rxtx_app.c', 'tx_ancillary_app.c', 'tx_audio_app.c',
	'tx_video_app.c', 'args.c', 'parse_json.c', 'player.c', 'rx_video_app.c',
	'rx_audio_app.c', 'rx_ancillary_app.c', 'tx_st22_app.c', 'rx_st22_app.c',
	'fmt.c', )
