# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2022 Intel Corporation

upd_server_sample_sources = files('udp_server_sample.c', '../sample/sample_util.c')
upd_client_sample_sources = files('udp_client_sample.c', '../sample/sample_util.c')

ufd_server_sample_sources = files('ufd_server_sample.c', '../sample/sample_util.c')
ufd_client_sample_sources = files('ufd_client_sample.c', '../sample/sample_util.c')